# lilith-rs

./: .env  .gitignore  Cargo.toml  diesel.toml  log4rs.yaml  package-lock.json
migrations/2025-07-01-211232_projects/: up.sql
migrations/2025-07-16-180835_add_collection/: up.sql
posts/kitten.rs/: content v2.md  content.md  kitten.yaml
posts/lilith.rs/: content.md  lilith.yaml
posts/maestro/: content.md  maestro.yaml
posts/neeko/: 01-Respite.md  02-RTMP.md  04-Maestro.md  06-Neeko.md  amf.yaml  content.md  maestro.yaml  neeko.yaml  nexus.yaml  respite.yaml  rtmp.yaml
projects/kitten.rs/: kitten.yaml
projects/lilith.rs/: lilith.yaml
projects/neeko/: neeko.yaml
public/css/: lilith.css  theme-dark.css  theme-light.css
public/js/: navbar.js  sinceDate.js  theme.js
public/yaml/: contact.yaml
src/: main.rs  schema.rs
src/blog/: mod.rs  route.rs
src/contact/: mod.rs
src/database/: mod.rs
src/project/: route.rs
templates/: about.html.tera  all_blog_posts.html.tera  all_projects.html.tera  base.html.tera  blog_post.html.tera  contact.html.tera  footer.html.tera  general_error.html.tera  index.html.tera  navbar.html.tera  not_found.html.tera  project.html.tera
