[package]
name = "lilith"
version = "0.1.0"
edition = "2024"
authors = ["lilith <lilith@kitten.rs>"]

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = {version = "0.2", features = ["tera"]}
tokio = {version = "1", features = ["full"]}
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
] }
chrono = "0.4"
diesel_migrations = "2.2"
dotenvy = "0.15"
log = "0.4"
log4rs = "1"
notify = "8"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1"
comrak = "0.39"
